Revert "修改收纳器连接判断逻辑"
This reverts commit 41ae12b321b19592746e9d976f848fdc9696482e.